@@ -17,6 +17,9 @@ ALTER TABLE `team` DROP COLUMN `judging_last_started`;
 
 ALTER TABLE `team`
   ADD COLUMN `judging_last_started` datetime default NULL COMMENT 'Start time of last judging for priorization' AFTER `comments`;
+ALTER TABLE `team`
+  ADD COLUMN `enabled` tinyint(1) unsigned NOT NULL DEFAULT '1' COMMENT 'Whether the team is visible and operational' AFTER `authtoken`;
+
 
 CREATE TABLE `auditlog` (
   `logid` int(10) unsigned NOT NULL AUTO_INCREMENT,
